Ajout du component de gestion de préférences du compte utilisateur.

--- a/angularProject/nogashiFront/src/app/components/pages/pages_common/compte-commandes/compte-commandes.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_common/compte-commandes/compte-commandes.component.html
@@ -21,14 +21,14 @@
               </p>
             </div>
           </a>
-          <a href="compte-preferences.html">
+          <a href="myPreferences">
             <div class="onglet2">
               <p class="nom-onglet">
                 <i class="fas fa-cog"></i> Préférences
               </p>
             </div>
           </a>
-          <a href="compte-commandes.html">
+          <a href="myOrders">
             <div class="onglet3">
               <p class="nom-commandes">
                 <i class="fas fa-cube"></i> Commandes
