--- a/angularProject/nogashiFront/src/app/components/pages/pages_common/compte/compte.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_common/compte/compte.component.html
@@ -14,14 +14,14 @@
 
       <div class="grand-bloc-onglets">
         <div class="bloc-onglet">
-          <a href="compte.html">
+          <a href="myProfile">
             <div class="onglet">
               <p class="nom-onglet">
                 <i class="fas fa-user"></i> Profil
               </p>
             </div>
           </a>
-          <a href="compte-preferences.html">
+          <a href="myPreferences">
             <div class="onglet2">
               <p class="nom-onglet">
                 <i class="fas fa-cog"></i> Préférences
