--- a/angularProject/nogashiFront/src/app/components/root/app.component.html
+++ b/angularProject/nogashiFront/src/app/components/root/app.component.html
@@ -40,7 +40,9 @@
                 <li routerLinkActive="active"><a routerLink="tchat">Tchat</a></li>
                 <li routerLinkActive="active"><a routerLink="productSheet">Fiche produit</a></li>
                 <li routerLinkActive="active"><a routerLink="myProfile">Compte utilisateur</a></li>
-              <li routerLinkActive="active"><a routerLink="myOrders">Compte utilisateur - commandes</a></li>
+                <li routerLinkActive="active"><a routerLink="myOrders">Compte utilisateur - commandes</a></li>
+                <li routerLinkActive="active"><a routerLink="myPreferences">Compte utilisateur - préférences</a></li>
+                <li routerLinkActive="active"><a routerLink="myComments">Compte utilisateur - commentaires</a></li>
 
               <!-- Pages individual -->
                 <li routerLinkActive="active"><a routerLink="individual/welcome">Accueil - Compte particulier</a></li>
