--- a/angularProject/nogashiFront/src/app/components/pages/pages_individual/welcome-individual/welcome-individual.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_individual/welcome-individual/welcome-individual.component.html
@@ -1,4 +1,55 @@
 <div class="background"> <!-- Background => Dévoilement du footer-->
+  <section class="section-bonjour-compte">
+    <div class="container">
+      <div class="row">
+        <div class="bloc-bonjour-compte col-12">
+          <div class="bloc-avatar">
+            <img class="img-bonjour" src="/assets/img/profil/profil.png" alt="photo de l'utilisateur">
+          </div>
+          <div class="bloc-bonjour">
+            <h2>Bonjour Boulangerie Mathieu</h2>
+            <p class="message-bonjour"><i class="fas fa-quote-left"></i> Bienvenue sur votre compte. Retrouvez toutes vos informations personnelles et vos préférences. <i class="fas fa-quote-right"></i>
+            </p>
+          </div>
+        </div>
+
+        <div class="grand-bloc-onglets">
+          <div class="bloc-onglet">
+            <a href="#il-faut-aller-ici-commerces">
+              <div class="onglet">
+                <p class="nom-onglet">
+                  Mes Commerces
+                </p>
+              </div>
+            </a>
+            <a href="#il-faut-aller-ici-commandes">
+              <div class="onglet2">
+                <p class="nom-onglet">
+                  Commandes en Cours
+                </p>
+              </div>
+            </a>
+            <a href="#il-faut-aller-ici-produits">
+              <div class="onglet3">
+                <p class="nom-commandes">
+                  Mes Produits
+                </p>
+              </div>
+            </a>
+            <a href="#il-faut-aller-ici-comptes">
+              <div class="onglet4">
+                <p class="nom-commentaires">
+                  Comptes Employés
+                </p>
+              </div>
+            </a>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </section>
+
   <section class="section-rechercher-produit">
     <div class="container">
       <div class="row">
