--- a/angularProject/nogashiFront/src/app/components/pages/pages_common/command-payment/command-payment.component.scss
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_common/command-payment/command-payment.component.scss
@@ -123,10 +123,6 @@ h4 {
   background: var(--couleurRougeIncorrect);
 }
 
-
-.bloc-securite {
-}
-
 .texte-transaction2 {
   font-family: 'roboto', sans-serif;
   font-size: 0.8em;
@@ -387,9 +383,20 @@ input[type="checkbox"]:checked {
   text-align: center;
   color: var(--couleurNoir);
   margin-bottom: 70px;
+  margin-left: 7px;
 }
 
 .fa-lock {
   font-size: 0.90em;
+  margin-right: 10px;
+}
+
+.fa-cc-visa {
+  font-family: 'roboto', sans-serif;
+  font-size: 1.5em;
+  text-align: center;
+  color: var(--couleurNoir);
+  margin-bottom: 70px;
+  margin-right: 10px;
 }
 
