--- a/angularProject/nogashiFront/src/app/components/pages/pages_common/command-recap/command-recap.component.scss
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_common/command-recap/command-recap.component.scss
@@ -102,8 +102,8 @@
   text-align: center;
   color: var(--couleurBlancCreme);
   background-color: var(--couleurRougeIncorrect);
-  padding-top: 8px;
-  padding-bottom: 8px;
+  padding-top: 1rem;
+  padding-bottom: 1px;
   margin-top: 5px;
   margin-left: 30%;
   margin-right: 30%;
