--- a/angularProject/nogashiFront/src/app/components/pages/pages_common/shopping-cart/shopping-cart.component.scss
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_common/shopping-cart/shopping-cart.component.scss
@@ -58,7 +58,7 @@
 
 .fa-sort-down {
   margin-left: 7px;
-  padding-bottom:  -10px;
+  padding-bottom: -20px;
 }
 
 .bloc-commerce-commande {
@@ -182,8 +182,8 @@ img {
   text-align: center;
   color: var(--couleurBlancCreme);
   background-color: var(--couleurRougeIncorrect);
-  padding-top: 8px;
-  padding-bottom: 8px;
+  padding-top: 1rem;
+  padding-bottom: 1px;
   margin-top: 5px;
   margin-left: 30%;
   margin-right: 30%;
