Ajout de liens pour lier les pages entre elles (certains sont pas encore mis en place).

--- a/angularProject/nogashiFront/src/app/components/modules/comments/comments.component.html
+++ b/angularProject/nogashiFront/src/app/components/modules/comments/comments.component.html
@@ -12,7 +12,7 @@
         <div class="bloc-textarea">
           <textarea class="textarea col-8" >Ecrivez votre commentaire ici</textarea>
           <div class="bloc-envoyer">
-            <a href=""><div id ="bouton-envoyer" class="bouton-envoyer">ENVOYER</div></a>
+            <a href="#"><div id ="bouton-envoyer" class="bouton-envoyer">ENVOYER</div></a>
           </div>
         </div>
       </div>
