--- a/angularProject/nogashiFront/src/app/components/modules/social-box/social-box.component.html
+++ b/angularProject/nogashiFront/src/app/components/modules/social-box/social-box.component.html
@@ -5,9 +5,6 @@
                     <a href="https://fr-fr.facebook.com/"><i class="fab fa-facebook-f"></i></a>
                 </li>
                 <li class="twitter">
-                    <a href="https://www.google.com/search?client=firefox-b&q=twitter"><i class="fab fa-twitter"></i></a>
-                </li>
-                <li>
-                    <a href="https://plus.google.com/discover"><i class="fab fa-google-plus-g"></i></a>
+                    <a href="https://twitter.com/?lang=fr"><i class="fab fa-twitter"></i></a>
                 </li>
             </ul>
