--- a/angularProject/nogashiFront/src/app/components/pages/pages_anonyme/find-us/find-us.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_anonyme/find-us/find-us.component.html
@@ -115,20 +115,17 @@
           <ul class="ul-contact">
             <li class="menu-contact">- 1 Rue Esquermoise, 59800 -</li>
             <li class="menu-contact">- 03.20.30.79.73 -</li>
-            <a href=""><li class="menu-contact2">- nogashis@gmail.com -</li></a>
+            <a href="#"><li class="menu-contact2">- nogashis@gmail.com -</li></a>
           </ul>
         </div>
         <h4 class="titre-suivez col-4"><span class="couleur-trait"><i class="fas fa-caret-right"></i></span> Suivez-Nous sur</h4>
         <div class="bloc-suivez  col-12">
           <ul class="ul-suivez">
             <li class="menu-suivez">
-              <p>Twitter</p>
+              <a href="https://twitter.com/?lang=fr"><p>Twitter</p></a>
             </li>
             <li class="menu-suivez">
-              <p>Facebook </p>
-            </li>
-            <li class="menu-suivez">
-              <p>Google+</p>
+              <a href="https://fr-fr.facebook.com/"><p>Facebook </p></a>
             </li>
           </ul>
         </div>
