--- a/angularProject/nogashiFront/src/app/components/pages/pages_anonyme/welcome/welcome.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_anonyme/welcome/welcome.component.html
@@ -46,7 +46,7 @@
       <h3 class="titre-offre col-12">// une offre adaptée pour tous !</h3>
       <div class="bloc-offre col-12">
         <article class="particulier col-3">
-          <a href="">
+          <a href="#">
             <figure>
               <figcaption>
                 <h4 class="titre-particulier">Particulier</h4>
@@ -57,7 +57,7 @@
         </article>
 
         <article class="commercant col-3 offset-1">
-          <figure >
+          <figure>
             <figcaption>
               <h4 class="titre-commercant">Commercant</h4>
               <p class="texte-commercant"> Nisi mihi Phaedrum, inquam, tu mentitum aut Zenonem putas, quorum utrumque audivi,</p>
@@ -66,7 +66,7 @@
         </article>
 
         <article class="association col-3 offset-1">
-          <figure >
+          <figure>
             <figcaption>
               <h4 class="titre-association">Association</h4>
               <p class="texte-association"> Nisi mihi Phaedrum, inquam, tu mentitum aut Zenonem putas, quorum utrumque audivi,</p>
@@ -126,7 +126,7 @@
              <h3 class="titre-trouver">// Ou nous trouver ?</h3>
              <p class="texte-trouver">Raptim igitur properantes ut motus sui rumores  celeritate nimia praevenirent, vigore corporum ac levitate..</p>
            </div>
-           <a href=""><div class="bouton-savoir-plus">EN SAVOIR +</div></a>
+           <a href="#"><div class="bouton-savoir-plus">EN SAVOIR +</div></a>
         </div>
       </div>
    </div>
