--- a/angularProject/nogashiFront/src/app/components/pages/pages_common/command-payment/command-payment.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_common/command-payment/command-payment.component.html
@@ -27,7 +27,7 @@
             <p class="texte-transaction">123456789</p>
           </div>
           <div class="bloc-annuler col-12">
-            <a href="accueil-particulier.html"><div id ="bouton-payer" class="bouton-annuler">ANNULER</div></a>
+            <a href="individual/welcome"><div id ="bouton-payer" class="bouton-annuler">ANNULER</div></a>
           </div>
           <div class="bloc-securite">
             <p class="texte-transaction2">100% sécurisé <i class="fas fa-lock"></i></p>
@@ -96,7 +96,7 @@
           </form>
 
           <div class="bloc-payer col-12">
-            <a href="confirmation-commande.html"><div id ="bouton-payer" class="bouton-payer">VALIDATION PAIEMENT</div></a>
+            <a href="commandConfirmation"><div id ="bouton-payer" class="bouton-payer">VALIDATION PAIEMENT</div></a>
           </div>
           <p class="texte-privacy">By making a purchase, you accept the <span class="mot-privacy">Terms of Service</span> and <span class="mot-privacy">Privacy Policy</span>.
             Any subscriptions will automatically renew and your credit card will be
