--- a/angularProject/nogashiFront/src/app/components/pages/pages_common/compte-commandes/compte-commandes.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_common/compte-commandes/compte-commandes.component.html
@@ -198,7 +198,7 @@
         </div>
 
         <div class="bloc-envoyer col-12">
-          <a href=""><div id ="bouton-envoyer" class="bouton-envoyer"><i class="fas fa-plus"></i> DE COMMANDES</div></a>
+          <a href="#"><div id ="bouton-envoyer" class="bouton-envoyer"><i class="fas fa-plus"></i> DE COMMANDES</div></a>
         </div>
       </div>
 
