--- a/angularProject/nogashiFront/src/app/components/pages/pages_common/deactivate-account/deactivate-account.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_common/deactivate-account/deactivate-account.component.html
@@ -14,7 +14,7 @@
       <label for="Saisissez DESACTIVER" class="label-formulaire"><i class="fas fa-asterisk"></i> Saisissez DESACTIVER</label>
       <input id="desactivation" class="desactivation" type="text" name="desactiver" size="10" >
 
-      <a href=""><div id ="bouton-desactivation" class="bouton-desactivation">Désactiver</div></a>
+      <a href="#"><div id ="bouton-desactivation" class="bouton-desactivation">Désactiver</div></a>
     </form>
   </div>
 </section>
