--- a/angularProject/nogashiFront/src/app/components/pages/pages_common/password-reset/password-reset.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_common/password-reset/password-reset.component.html
@@ -20,7 +20,7 @@
       <input id="confirmation" class="confirmation" type="password" name="confirmation" minlength="15" maxlength="15" required>
       <span id="confirmationRegex" class="confirmation-regex"></span>
 
-      <a href=""><div id ="bouton-reinitialisation" class="bouton-reinitialisation">envoyer</div></a>
+      <a href="#"><div id ="bouton-reinitialisation" class="bouton-reinitialisation">envoyer</div></a>
       <p class="avertissement-reinitialisation">* Veuillez remplir tous les champs pour valider votre inscription.</p>
     </form>
   </div>
