--- a/angularProject/nogashiFront/src/app/components/pages/pages_common/product-sheet/product-sheet.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_common/product-sheet/product-sheet.component.html
@@ -39,7 +39,7 @@
                   </div>
                 </div>
                 <div class="bloc-panier">
-                  <a href=""><div id ="bouton-panier" class="bouton-panier"><i class="fas fa-shopping-bag"></i>AJOUTER AU PANIER</div></a>
+                  <a href="shoppingCart"><div id ="bouton-panier" class="bouton-panier"><i class="fas fa-shopping-bag"></i>AJOUTER AU PANIER</div></a>
                 </div>
               </div>
               <div class="Lieu-affichage col-8">
