--- a/angularProject/nogashiFront/src/app/components/pages/pages_common/shopping-cart/shopping-cart.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_common/shopping-cart/shopping-cart.component.html
@@ -63,7 +63,7 @@
           </div>
           <div class="bloc-bouton-commande col-12">
             <div class="bloc-payer">
-              <a href="paiement.html"><div id ="bouton-payer" class="bouton-payer">PAYER</div></a>
+              <a href="commandPayment"><div id ="bouton-payer" class="bouton-payer">PAYER</div></a>
             </div>
           </div>
         </div>
@@ -115,7 +115,7 @@
 
           <div class="bloc-bouton-commande col-12">
             <div class="bloc-payer">
-              <a href="paiement.html"><div id ="bouton-payer" class="bouton-payer">PAYER</div></a>
+              <a href="commandPayment"><div id ="bouton-payer" class="bouton-payer">PAYER</div></a>
             </div>
           </div>
         </div>
