--- a/angularProject/nogashiFront/src/app/components/pages/pages_common/tchat/tchat.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_common/tchat/tchat.component.html
@@ -51,7 +51,7 @@
             </div>
           </div>
           <div class="bloc-envoyer col-12">
-            <a href=""><div id ="bouton-envoyer" class="bouton-envoyer">envoyer message</div></a>
+            <a href="#"><div id ="bouton-envoyer" class="bouton-envoyer">envoyer message</div></a>
           </div>
         </div>
       </div>
