--- a/angularProject/nogashiFront/src/app/components/pages/pages_individual/welcome-individual/welcome-individual.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_individual/welcome-individual/welcome-individual.component.html
@@ -204,7 +204,7 @@
               </div>
             </div>
             <div class="bloc-panier">
-              <a href=""><div id ="bouton-panier" class="bouton-panier"><i class="fas fa-shopping-bag"></i>AJOUTER AU PANIER</div></a>
+              <a href="shoppingCart"><div id ="bouton-panier" class="bouton-panier"><i class="fas fa-shopping-bag"></i>AJOUTER AU PANIER</div></a>
             </div>
           </div>
 
@@ -242,7 +242,7 @@
               </div>
             </div>
             <div class="bloc-panier">
-              <a href=""><div id ="bouton-panier" class="bouton-panier">AJOUTER AU PANIER</div></a>
+              <a href="shoppingCart"><div id ="bouton-panier" class="bouton-panier">AJOUTER AU PANIER</div></a>
             </div>
           </div>
 
@@ -280,7 +280,7 @@
               </div>
             </div>
             <div class="bloc-panier">
-              <a href=""><div id ="bouton-panier" class="bouton-panier">AJOUTER AU PANIER</div></a>
+              <a href="shoppingCart"><div id ="bouton-panier" class="bouton-panier">AJOUTER AU PANIER</div></a>
             </div>
           </div>
           <div class="bloc-affichage-produit col-12">
@@ -317,7 +317,7 @@
               </div>
             </div>
             <div class="bloc-panier">
-              <a href=""><div id ="bouton-panier" class="bouton-panier">AJOUTER AU PANIER</div></a>
+              <a href="shoppingCart"><div id ="bouton-panier" class="bouton-panier">AJOUTER AU PANIER</div></a>
             </div>
           </div>
 
@@ -326,37 +326,37 @@
 
           <div class="bloc-pagination col-12">
             <div class="pagination">
-              <a href="">
+              <a href="#">
                 <i class="fas fa-angle-double-left"></i>
               </a>
-              <a href="">
+              <a href="#">
                 <i class="fas fa-angle-left"></i>
               </a>
               <p class="text-page">page :</p>
-              <a href="">
+              <a href="#">
                 <div class="cercle-element">
                   <p class="elements-pagination">1</p>
                 </div>
               </a>
-              <a href="">
+              <a href="#">
                 <div class="cercle-element">
                   <p class="elements-pagination">2</p>
                 </div>
               </a>
-              <a href="">
+              <a href="#">
                 <div class="cercle-element">
                   <p class="elements-pagination">3</p>
                 </div>
               </a>
-              <a href="">
+              <a href="#">
                 <div class="cercle-element">
                   <p class="elements-pagination">4</p>
                 </div>
               </a>
-              <a href="">
+              <a href="#">
                 <i class="fas fa-angle-right"></i>
               </a>
-              <a href="">
+              <a href="#">
                 <i class="fas fa-angle-double-right"></i>
               </a>
             </div>
@@ -378,7 +378,7 @@
         <div class="bloc-img-produits col-12">
           <figure class="element-img">
             <a href="#"><img class="img-produit" src="/assets/img/produit/pain-tradition.jpg" alt="photo du produit"></a>
-            <a href="">
+            <a href="#">
               <div class="cercle-plus">
                 <span class="plus"><i class="fas fa-plus"></i></span>
               </div>
@@ -386,7 +386,7 @@
           </figure>
           <figure class="element-img">
             <a href="#"><img class="img-produit" src="/assets/img/produit/eclairchocoloat-mathieu.jpg" alt="photo du produit"></a>
-            <a href="">
+            <a href="#">
               <div class="cercle-plus">
                 <span class="plus"><i class="fas fa-plus"></i></span>
               </div>
@@ -394,7 +394,7 @@
           </figure>
           <figure class="element-img">
             <a href="#"><img class="img-produit" src="/assets/img/produit/croissant-mathieu.jpg" alt="photo du produit"></a>
-            <a href="">
+            <a href="#">
               <div class="cercle-plus">
                 <span class="plus"><i class="fas fa-plus"></i></span>
               </div>
@@ -402,7 +402,7 @@
           </figure>
           <figure class="element-img">
             <a href="#"><img class="img-produit" src="/assets/img/produit/painfromage-mathieu.jpg" alt="photo du produit"></a>
-            <a href="">
+            <a href="#">
               <div class="cercle-plus">
                 <span class="plus"><i class="fas fa-plus"></i></span>
               </div>
@@ -410,7 +410,7 @@
           </figure>
           <figure class="element-img">
             <a href="#"><img class="img-produit" src="/assets/img/produit/painolivesmathieujpg.jpg" alt="photo du produit"></a>
-            <a href="">
+            <a href="#">
               <div class="cercle-plus">
                 <span class="plus"><i class="fas fa-plus"></i></span>
               </div>
@@ -418,7 +418,7 @@
           </figure>
           <figure class="element-img">
             <a href="#"><img class="img-produit" src="/assets/img/produit/segles-mathieu.jpg" alt="photo du produit"></a>
-            <a href="">
+            <a href="#">
               <div class="cercle-plus">
                 <span class="plus"><i class="fas fa-plus"></i></span>
               </div>
@@ -426,7 +426,7 @@
           </figure>
           <figure class="element-img">
             <a href="#"><img class="img-produit" src="/assets/img/produit/tartelettePistacheGriottesCrumble-mathieu.jpg" alt="photo du produit"></a>
-            <a href="">
+            <a href="#">
               <div class="cercle-plus">
                 <span class="plus"><i class="fas fa-plus"></i></span>
               </div>
@@ -434,7 +434,7 @@
           </figure>
           <figure class="element-img">
             <a href="#"><img class="img-produit" src="/assets/img/produit/sandwich-subways.jpg" alt="photo du produit"></a>
-            <a href="">
+            <a href="#">
               <div class="cercle-plus">
                 <span class="plus"><i class="fas fa-plus"></i></span>
               </div>
@@ -445,10 +445,10 @@
       <div class="bloc-mes-commerces col-12">
         <h2 class="titre-mes-commerces col-5">// MES COMMERCES </h2>
         <div class="bloc-img-commerces col-12">
-          <a href=""><img class="img-commerce" src="/assets/img/commerce/basilic.png" alt=""></a>
-          <a href=""><img class="img-commerce" src="/assets/img/commerce/freshway.jpg" alt=""></a>
-          <a href=""><img class="img-commerce" src="/assets/img/commerce/daily-juicery.png" alt=""></a>
-          <a href=""><img class="img-commerce" src="/assets/img/commerce/boulangerie-mathieu.jpeg" alt=""></a>
+          <a href="#"><img class="img-commerce" src="/assets/img/commerce/basilic.png" alt=""></a>
+          <a href="#"><img class="img-commerce" src="/assets/img/commerce/freshway.jpg" alt=""></a>
+          <a href="#"><img class="img-commerce" src="/assets/img/commerce/daily-juicery.png" alt=""></a>
+          <a href="#"><img class="img-commerce" src="/assets/img/commerce/boulangerie-mathieu.jpeg" alt=""></a>
         </div>
       </div>
     </div>
@@ -466,12 +466,12 @@
         <br>
 
         <div class="bloc-facture-print col-12">
-          <a href="">
+          <a href="#">
             <div class="print">
               <i class="fas fa-print"></i>
             </div>
           </a>
-          <a href="">
+          <a href="#">
             <div class="pdf">
               <i class="far fa-file-pdf"></i>
             </div>
@@ -528,7 +528,7 @@
       <div class="row">
         <div class="bloc-historique-commande ">
           <p class="texte-historique-commande">Etenim si attendere diligenter, existimare vere de omni hac causa volueritis, sic constituetis,  iudices, nec descensurum</p>
-          <a href=""><div id ="bouton-historique-commande" class="bouton-historique-commande">Historique Commande</div></a>
+          <a href="commandRecap"><div id ="bouton-historique-commande" class="bouton-historique-commande">Historique Commande</div></a>
         </div>
       </div>
     </div>
