--- a/angularProject/nogashiFront/src/app/components/pages/pages_merchant/welcome-merchant/welcome-merchant.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_merchant/welcome-merchant/welcome-merchant.component.html
@@ -16,28 +16,28 @@
 
         <div class="grand-bloc-onglets">
           <div class="bloc-onglet">
-            <a href="#il-faut-aller-ici-commerces">
+            <a href="#">
               <div class="onglet">
                 <p class="nom-onglet">
                   Mes Commerces
                 </p>
               </div>
             </a>
-            <a href="#il-faut-aller-ici-commandes">
+            <a href="#">
               <div class="onglet2">
                 <p class="nom-onglet">
                   Commandes en Cours
                 </p>
               </div>
             </a>
-            <a href="#il-faut-aller-ici-produits">
+            <a href="#">
               <div class="onglet3">
                 <p class="nom-commandes">
                   Mes Produits
                 </p>
               </div>
             </a>
-            <a href="#il-faut-aller-ici-comptes">
+            <a href="#">
               <div class="onglet4">
                 <p class="nom-commentaires">
                   Comptes Employés
@@ -63,7 +63,7 @@
               <h2 class="nom-commerce">Boulangerie Mathieu</h2>
               <p class="rue-commerce">82 Rue du Molinel, 59000 Lille</p>
               <div class="bloc-ouverture ">
-                <a href=""><div id ="bouton-ouverture" class="bouton-ouverture">OUVERT</div></a>
+                <a href="#"><div id ="bouton-ouverture" class="bouton-ouverture">OUVERT</div></a>
               </div>
             </div>
             <div class="bloc-information-horaire col-6">
@@ -112,8 +112,8 @@
                 <td class="td ">1.10€</td>
                 <td class="td">02</td>
                 <td class="td">En Attente</td>
-                <a href=""><td class="td-lien">John Doe</td></a>
-                <a href=""><td class="td"><i class="far fa-file-pdf"></i></td></a>
+                <a href="#"><td class="td-lien">John Doe</td></a>
+                <a href="#"><td class="td"><i class="far fa-file-pdf"></i></td></a>
               </tr>
             </table>
           </div>
@@ -325,42 +325,42 @@
               </div>
             </div>
             <div class="bloc-panier">
-              <a href=""><div id ="bouton-panier" class="bouton-panier">DUPLIQUER</div></a>
+              <a href="#"><div id ="bouton-panier" class="bouton-panier">DUPLIQUER</div></a>
             </div>
           </div>
           <div class="bloc-pagination col-12">
             <div class="pagination">
-              <a href="">
+              <a href="#">
                 <i class="fas fa-angle-double-left"></i>
               </a>
-              <a href="">
+              <a href="#">
                 <i class="fas fa-angle-left"></i>
               </a>
               <p class="text-page">page :</p>
-              <a href="">
+              <a href="#">
                 <div class="cercle-element">
                   <p class="elements-pagination">1</p>
                 </div>
               </a>
-              <a href="">
+              <a href="#">
                 <div class="cercle-element">
                   <p class="elements-pagination">2</p>
                 </div>
               </a>
-              <a href="">
+              <a href="#">
                 <div class="cercle-element">
                   <p class="elements-pagination">3</p>
                 </div>
               </a>
-              <a href="">
+              <a href="#">
                 <div class="cercle-element">
                   <p class="elements-pagination">4</p>
                 </div>
               </a>
-              <a href="">
+              <a href="#">
                 <i class="fas fa-angle-right"></i>
               </a>
-              <a href="">
+              <a href="#">
                 <i class="fas fa-angle-double-right"></i>
               </a>
             </div>
