--- a/angularProject/nogashiFront/src/app/components/common/header/header.component.html
+++ b/angularProject/nogashiFront/src/app/components/common/header/header.component.html
@@ -1,6 +1,6 @@
 <header>
     <div class="menu">
-        <a href="index.html"><div class="cercle"><i class="fab fa-maxcdn"></i></div></a>
+        <a href="#"><div class="cercle"><i class="fab fa-maxcdn"></i></div></a>
         <div class="icones-menu">
           <div class="icones-user">
                 <i class="fas fa-user-circle"></i>
@@ -19,7 +19,7 @@
                  </div>
             </div>
             <div class="icone-panier">
-                <a href=""><div class="icones"><i class="fas fa-shopping-bag"></i></div>
+                <a href="shoppingCart"><div class="icones"><i class="fas fa-shopping-bag"></i></div>
                     <div class="cercle-prix">3</div>
                 </a>
             </div>
@@ -29,7 +29,7 @@
         </div>
 
         <div id="bloc-menu" class="bloc-menu col-12">
-             <a href="index.html">
+             <a href="#">
                   <div id="bloc-quitter" class="bloc-quitter">
                       <div class="croix-quitter">
                             <span class="barre-croix"></span>
@@ -39,10 +39,9 @@
              </a>
              <nav>
                 <ul>
-                    <a href="index.html"><li class="onglet-menu-principal">Accueil</li></a>
-                    <a href="trouver.html"><li class="onglet-menu-principal">Ou Nous Trouver ?</li></a>
-                    <a href="faq.html"><li class="onglet-menu-principal">F.A.Q</li></a>
-                    <a href="contact.html"><li class="onglet-menu-principal">Contact</li></a>
+                    <a href="#"><li class="onglet-menu-principal">Accueil</li></a>
+                    <a href="findUs"><li class="onglet-menu-principal">Ou Nous Trouver ?</li></a>
+                    <a href="generalFaq"><li class="onglet-menu-principal">F.A.Q</li></a>
                 </ul>
             </nav>
         </div>
