--- a/angularProject/nogashiFront/src/app/components/pages/pages_anonyme/general-faq/general-faq.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_anonyme/general-faq/general-faq.component.html
@@ -63,7 +63,7 @@
         <div class="bloc-tchat">
           <h2 class="titre-tchat">BESOIN D'UN COMPLEMENT D'INFORMATION ?</h2>
           <p class="texte-tchat">Contactez-nous via le tchat</p>
-          <a href="tchat.html"><div class="bouton-tchat">CONNEXION AU TCHAT <i class="far fa-comment-dots"></i></div></a>
+          <a href="tchat"><div class="bouton-tchat">CONNEXION AU TCHAT <i class="far fa-comment-dots"></i></div></a>
         </div>
       </div>
     </div>
