--- a/angularProject/nogashiFront/src/app/components/pages/pages_merchant/faq-merchant/faq-merchant.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_merchant/faq-merchant/faq-merchant.component.html
@@ -66,7 +66,7 @@
         <div class="bloc-tchat">
           <h2 class="titre-tchat"><i class="far fa-question-circle"></i> // BESOIN D'UN COMPLEMENT D'INFORMATION ?</h2>
           <p class="texte-tchat">Contactez votre commerçant via le tchat</p>
-          <a href="tchat.html"><div class="bouton-tchat">CONNEXION AU TCHAT <i class="far fa-comment-dots"></i></div></a>
+          <a href="tchat"><div class="bouton-tchat">CONNEXION AU TCHAT <i class="far fa-comment-dots"></i></div></a>
         </div>
       </div>
     </div>
