Modification pages compte & compte-commandes

--- a/angularProject/nogashiFront/src/app/components/pages/pages_common/compte-commandes/compte-commandes.component.scss
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_common/compte-commandes/compte-commandes.component.scss
@@ -73,7 +73,8 @@ h2 {
   border: 1px solid var(--couleurVerte);
   border-radius: 8px 00px 00px 8px;
   background-color: var(--couleurNoir);
-  padding: 10px;
+  padding-top: 14px;
+  padding-bottom: 1px;
   cursor: pointer;
   opacity: 0.5;
 }
@@ -92,7 +93,8 @@ h2 {
   color: var(--couleurVerte);
   border: 1px solid var(--couleurVerte);
   background-color: var(--couleurNoir);
-  padding: 10px;
+  padding-top: 14px;
+  padding-bottom: 1px;
   -webkit-transition: all 0.3s ease-out;
   transition: all 0.3s ease-out;
   cursor: pointer;
@@ -113,7 +115,8 @@ h2 {
   color: var(--couleurVerte);
   border: 1px solid var(--couleurVerte);
   background-color: var(--couleurNoir);
-  padding: 10px;
+  padding-top: 14px;
+  padding-bottom: 1px;
   -webkit-transition: all 0.3s ease-out;
   transition: all 0.3s ease-out;
   cursor: pointer;
@@ -135,7 +138,8 @@ h2 {
   border: 1px solid var(--couleurVerte);
   border-radius: 0 8px 8px 0;
   background-color: var(--couleurNoir);
-  padding: 10px;
+  padding-top: 14px;
+  padding-bottom: 1px;
   -webkit-transition: all 0.3s ease-out;
   transition: all 0.3s ease-out;
   cursor: pointer;
