--- a/angularProject/nogashiFront/src/app/components/pages/pages_common/compte/compte.component.scss
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_common/compte/compte.component.scss
@@ -73,9 +73,10 @@ h2 {
   border: 1px solid var(--couleurVerte);
   border-radius: 8px 00px 00px 8px;
   background-color: var(--couleurNoir);
-  padding: 10px;
+  padding-top: 14px;
+  padding-bottom: 1px;
   cursor: pointer;
-  opacity: 0.5;
+  opacity: 1;
 }
 
 .onglet:hover {
@@ -92,7 +93,8 @@ h2 {
   color: var(--couleurVerte);
   border: 1px solid var(--couleurVerte);
   background-color: var(--couleurNoir);
-  padding: 10px;
+  padding-top: 14px;
+  padding-bottom: 1px;
   -webkit-transition: all 0.3s ease-out;
   transition: all 0.3s ease-out;
   cursor: pointer;
@@ -113,11 +115,12 @@ h2 {
   color: var(--couleurVerte);
   border: 1px solid var(--couleurVerte);
   background-color: var(--couleurNoir);
-  padding: 10px;
+  padding-top: 14px;
+  padding-bottom: 1px;
   -webkit-transition: all 0.3s ease-out;
   transition: all 0.3s ease-out;
   cursor: pointer;
-  opacity: 1;
+  opacity: 0.5;
 }
 
 .onglet3:hover {
@@ -135,14 +138,15 @@ h2 {
   border: 1px solid var(--couleurVerte);
   border-radius: 0 8px 8px 0;
   background-color: var(--couleurNoir);
-  padding: 10px;
+  padding-top: 14px;
+  padding-bottom: 1px;
   -webkit-transition: all 0.3s ease-out;
   transition: all 0.3s ease-out;
   cursor: pointer;
   opacity: 0.5;
 }
 
-.onglet4:hover {
+ .onglet4:hover {
   opacity: 1;
 }
 
